--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -116,7 +116,7 @@
             <div>
                 <p
                     style="margin-left: 50px; margin-top: 10px; font-family: 'Raleway', sans-serif; width: 100%; text-align: center; font-weight: 600;">
-                    Daily sales of {{ daily.Month }}</p>
+                    Daily sales of {{ salesMonth.Month }}</p>
                 <canvas class="upper" id="dailyReport" height="300"></canvas>
             </div>
             <div style="margin-top: 50px;">
@@ -168,7 +168,7 @@
         new Chart('dailyReport', {
             type: 'line',
             data: {
-                labels: [{% for date,data in daily.items %}{%if date == 'Month'%}{%else%}'{{date}}',{%endif%}{%endfor%}],
+                labels: [{% for date,data in daily.items %}'{{date}}',{%endfor%}],
                 datasets: [{
                     label: "Revenue",
                     lineTension: 0.3,
@@ -181,7 +181,7 @@
                     pointHoverBackgroundColor: "rgba(2,117,216,1)",
                     pointHitRadius: 20,
                     pointBorderWidth: 2,
-                    data: [{% for date,data in daily.items %}{%if data.Revenue == ''%}{%else%}'{{data.Revenue}}',{%endif%}{%endfor%}],
+                    data: [{% for date,data in daily.items %}'{{data.Revenue}}',{%endfor%}],
                 }],
             },
             options: {
@@ -200,7 +200,6 @@
                     yAxes: [{
                         ticks: {
                             min: 0,
-                            max: 40000,
                             maxTicksLimit: 5
                         },
                         gridLines: {
