--- a/templates/bill.html
+++ b/templates/bill.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.jsdelivr.net/gh/englishextra/qrjs2@latest/js/qrjs2.min.js"></script>
     <title>BILL</title>
     <style>
+        body{
+            margin: 0 20px 0 20px;
+        }
         table {
             width: 100vw;
         }
@@ -18,6 +21,9 @@
 <body>
 
     <style type="text/css">
+        *{
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
         .tg {
             border-collapse: collapse;
             border-spacing: 0;
@@ -50,8 +56,33 @@
             text-align: left;
             vertical-align: top
         }
-        #inwordsammount{
+
+        #inwordsammount {
             text-transform: capitalize;
+        }
+        .c1{
+            width: 35px;
+        }
+        .c2{
+            width: 270px;
+        }
+        .c3{
+            width: 80px;
+        }
+        .c4{
+            width: 100px;
+        }
+        .c5{
+            width: 100px;
+        }
+        .c6{
+            width: 100px;
+        }
+        .c7{
+            width: 100px;
+        }
+        .c8{
+            width: 100px;
         }
     </style>
     <table class="tg">
@@ -94,39 +125,47 @@
                 </td>
             </tr>
             <tr>
-                <td class="tg-0lax">SNo</td>
-                <td class="tg-0lax">product name</td>
-                <td class="tg-0lax">Quantity</td>
-                <td class="tg-0lax">HSN</td>
-                <td class="tg-0lax">Batch No</td>
-                <td class="tg-0lax">Expiary</td>
-                <td class="tg-0lax">MRP</td>
-                <td class="tg-0lax">Amount</td>
+                <td class="tg-0lax c1">S.No</td>
+                <td class="tg-0lax c2">product name</td>
+                <td class="tg-0lax c3">Quantity</td>
+                <td class="tg-0lax c4">HSN</td>
+                <td class="tg-0lax c5">Batch No</td>
+                <td class="tg-0lax c6">Expiry</td>
+                <td class="tg-0lax c7">MRP</td>
+                <td class="tg-0lax c8">Amount</td>
             </tr>
+        </tbody>
+    </table>
+    <table class="tg" style="height: 200px;">
+        <tbody>
             {% for med in data %}
             <tr>
-                <td class="tg-0lax">{{ forloop.counter }}</td>
-                <td class="tg-0lax">{{ med.meds.name }}</td>
-                <td class="tg-0lax">{{ med.quantity }}</td>
-                <td class="tg-0lax">{{med.meds.HSN}}</td>
-                <td class="tg-0lax">{{ med.meds.batchNo }}</td>
-                <td class="tg-0lax">{{ med.meds.expiryDate }}</td>
-                <td class="tg-0lax" id="MRP">{{ med.meds.price }}</td>
-                <td class="tg-0lax" id="GrandTotal"></td>
+                <td class="tg-0lax c1">{{ forloop.counter }}</td>
+                <td class="tg-0lax c2">{{ med.meds.name }}</td>
+                <td class="tg-0lax c3">{{ med.quantity }}</td>
+                <td class="tg-0lax c4">{{med.meds.HSN}}</td>
+                <td class="tg-0lax c5">{{ med.meds.batchNo }}</td>
+                <td class="tg-0lax c6">{{ med.meds.expiryDate }}</td>
+                <td class="tg-0lax c7" id="MRP">{{ med.meds.price }}</td>
+                <td class="tg-0lax c8" id="GrandTotal"></td>
                 <script>
                     var GrandTotal = document.getElementById("GrandTotal");
-                    GrandTotal.innerHTML = Math.round(eval('{{ med.meds.price }} * {{med.quantity}}')*100)/100;
+                    GrandTotal.innerHTML = Math.round(eval('{{ med.meds.price }} * {{med.quantity}}') * 100) / 100;
                 </script>
             </tr>
             {% endfor %}
+        </tbody>
+    </table>
+    <table class="tg">
+        <tbody>
             <tr>
                 <td class="tg-0lax" colspan="4" style="padding: 0; text-align: center;">
-                    <div style="display: flex; align-items: center; padding-left: 50px;">
-                        Scan to pay
+                    <div style="display: flex; align-items: center; padding-left: 50px; ">
+                        Scan through any UPI app (Paytm / Google Pay / PhonePe / BHIM)
                         <div id="qrpay" style="margin-left: 30px"></div>
                     </div>
                 </td>
-                <td class="tg-0lax" colspan="4" style="padding: 0 0 0 30px">
+                <td class="tg-0lax" colspan="4" style="padding: 0 0 0 30px; width: 300px;">
                     <div style="display: flex; line-height: 20px;">
                         <p>
                             Total:
@@ -146,13 +185,27 @@
                                 {{bill.total}}
                             </strong>
                             <br>
-                        <strong id="inwordsammount"></strong>
+                            <strong id="inwordsammount"></strong>
                         </p>
                     </div>
                 </td>
             </tr>
             <tr>
-                <td class="tg-0lax" colspan="8"></td>
+                <td class="tg-0lax" colspan="4">
+                    <p>
+                        Sold medicines shall be returned within 15 days of purchase between 12:00 PM to 4:00 PM.
+                        <br>
+                        Subject to {{firmData.city}} Jurisdiction.
+                        <br>
+                        <p style="width: 100%; text-align: center;">
+                            Thank you Visit Again
+                        </p>
+                    </p>
+                </td>
+                <td class="tg-0lax" colspan="4" style="display: flex; align-items: center; justify-content: space-around; flex-direction: column; height: 110%; border-left: none; border-top: none;">
+                    <h5> For {{firmData.name}}</h5>
+                    <h5>Authorised Signatory</h5>
+                </td>
             </tr>
         </tbody>
     </table>
@@ -170,7 +223,7 @@
             });
         div.appendChild(qr);
         document.getElementById("qrpay").appendChild(div);
-        document.getElementById("qrpay").childNodes[0].childNodes[0].style.height = "100px";
+        document.getElementById("qrpay").childNodes[0].childNodes[0].style.height = "98px";
 
     </script>
 
